# NLC_Monitoring_Platform

./: .eslintrc.js  .gitignore  .prettierrc  README.md  docker-compose.yml  electron-builder.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.base.json  tsconfig.json
.github/workflows/: ci-cd.yml  ci.yml  dependencies.yml  deploy-frontend.yml  docker.yml  docs.yml  generate-lockfile.yml  release-desktop.yml  security.yml
docs/: architecture.md
scripts/: setup.sh
